--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8080:8000"
     environment:
-      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/auth_db
+      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/tailtrail_db
     volumes:
       - .:/src
     command: ["uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
@@ -18,7 +18,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-      POSTGRES_DB: auth_db
+      POSTGRES_DB: tailtrail_db
     ports:
       - "5557:5432"
     healthcheck:
