--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,33 @@
-[tool.ruff]
-src = ["app"]
-target-version = "py311"
-line-length = 88
-lint.fixable = ["ALL"]
-lint.unfixable = []
-
-lint.select = [
-    "E",
-    "F",
-    "I",
-    "N",
-    "UP",
-    "B",
-    "C90",
-    "T20",
-    "RUF",
+[project]
+name = "tailtrail-backend"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "alembic==1.14.1",
+    "asyncpg==0.30.0",
+    "click==8.1.8",
+    "fastapi==0.115.8",
+    "Mako==1.3.9",
+    "MarkupSafe==3.0.2",
+    "pydantic==2.10.6",
+    "pydantic-settings==2.0.3",
+    "SQLAlchemy[asyncio]==2.0.38",
+    "starlette==0.45.3",
+    "typing_extensions==4.12.2",
+    "uvicorn==0.34.0",
+    "greenlet==3.0.3",
+    "bcrypt==4.3.0",
+    "pyjwt==2.10.1",
+    "pydantic[email]==2.10.6"
 ]
 
-lint.ignore = ["B008"]
+[project.optional-dependencies]
+dev = [
+    "pytest==8.3.5"
+]
 
-[tool.ruff.lint.isort]
-known-first-party = ["app"]
-combine-as-imports = true
-
-[tool.ruff.lint.pydocstyle]
-convention = "google"
-
-[tool.ruff.lint.flake8-bandit]
-check-typed-exception = true
-
-
-[tool.ruff.format]
-quote-style = "single"
-line-ending = "lf"
-indent-style = "space"
-skip-magic-trailing-comma = false
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
