--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "starlette==0.45.3",
     "typing_extensions==4.12.2",
     "uvicorn==0.34.0",
-    "greenlet==3.0.3",
+    "greenlet>=3.1.0",
     "bcrypt==4.3.0",
     "pyjwt==2.10.1",
     "pydantic[email]==2.10.6"
