--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres@db:5432/auth_db
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@db:5432/tailtrail_db
 
 
 [post_write_hooks]
