--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,19 @@
-FROM python:3.11-alpine
+FROM python:3.12-slim
 
-WORKDIR /src
+# Install uv
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 
-COPY .. /src
+# Set working directory
+WORKDIR /app
 
-RUN pip install --no-cache-dir -r requirements/base.txt
+# Copy all application files (excluding .venv via .dockerignore)
+COPY . .
+
+# Install dependencies
+RUN uv sync --frozen --no-dev
+
+# Expose port
+EXPOSE 8000
+
+# Run the application using uv run
+CMD ["uv", "run", "uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8000"]
