--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,7 +1,20 @@
-secret_key=your_secret_key
-jwt_expiration=3600
-db_host=db_host
-db_port=db_port
-db_user=db_user
-db_pass=your_password
-db_name=db_name
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASS=postgres
+DB_NAME=tailtrail_db
+
+SECRET_KEY=your-secret-key-change-this-in-production
+JWT_EXPIRATION=3600
+
+ECHO_SQL=true
+DEBUG_LOGS=true
+
+LOCAL_UPLOAD_PATH=uploads
+LOCAL_UPLOAD_URL=http://localhost:8000
+
+AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
+AWS_S3_BUCKET_NAME=AWS_S3_BUCKET_NAME
+AWS_REGION=AWS_REGION
+# AWS_CLOUDFRONT_URL=https://your-cloudfront-domain.com 
