--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "greenlet>=3.1.0",
     "bcrypt==4.3.0",
     "pyjwt==2.10.1",
-    "pydantic[email]==2.10.6"
+    "pydantic[email]==2.10.6",
+    "boto3>=1.39.3",
+    "python-multipart>=0.0.20",
 ]
 
 [project.optional-dependencies]
