--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,5 +31,10 @@ services:
       POSTGRES_DB: tailtrail_db
     ports:
       - "5557:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD", "pg_isready", "-U", "postgres"]
+
+volumes:
+  postgres_data:
