[docs] .env.example

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -10,11 +10,12 @@ JWT_EXPIRATION=3600
 ECHO_SQL=true
 DEBUG_LOGS=true
 
-LOCAL_UPLOAD_PATH=uploads
-LOCAL_UPLOAD_URL=http://localhost:8000
-
 AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
 AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
 AWS_S3_BUCKET_NAME=AWS_S3_BUCKET_NAME
 AWS_REGION=AWS_REGION
-# AWS_CLOUDFRONT_URL=https://your-cloudfront-domain.com 
+
+
+GEMINI_API_KEY=GEMINI_API_KEY
+
+COMPLAINT_SERVICE_URL=http://SOME_HOST:SOME_PORT/complaint 
