--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "SQLAlchemy[asyncio]==2.0.38",
     "starlette==0.45.3",
     "typing_extensions==4.12.2",
-    "uvicorn==0.34.0",
+    "uvicorn[standard]==0.34.0",
     "greenlet>=3.1.0",
     "bcrypt==4.3.0",
     "pyjwt==2.10.1",
