--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -19,4 +19,4 @@ COPY . .
 EXPOSE 8000
 
 # Run the application with auto-reload for development using uv
-CMD ["uv", "run", "uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uv", "run", "uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8000"]
